update properties for story-123 branch

--- a/dev/pct-app01/application.properties
+++ b/dev/pct-app01/application.properties
@@ -1,4 +1,5 @@
 #------Test new properties on this branch------
+pct.app.01.label=story-123-branch
 pct.app.01.initial=pct-dev-app01
 pct.app.01.email=pct-dev-app01@gmail.com
 
