--- a/dev/pct-app02/application.properties
+++ b/dev/pct-app02/application.properties
@@ -1,3 +1,4 @@
 #------Test new properties on this branch------
-pct.app.01.initial=pct-dev-app02
-pct.app.01.email=pct-dev-app02@gmail.com
+pct.app.02.label=story-123-branch
+pct.app.02.initial=pct-dev-app02
+pct.app.02.email=pct-dev-app02@gmail.com
