--- a/pct-app02.properties
+++ b/pct-app02.properties
@@ -1,3 +1,4 @@
 #------Test new properties on this branch------
+pct.app.02.label=story-123-branch
 pct.app.02.initial=pct-app02
 pct.app.02.email=pct-app02@netcompany.com
