--- a/int/pct-app01/application.properties
+++ b/int/pct-app01/application.properties
@@ -1,3 +1,4 @@
 #------Test new properties on this branch------
+pct.app.01.label=story-123-branch
 pct.app.01.initial=pct-int-app01
 pct.app.01.email=pct-int-app01@gmail.com
