--- a/int/pct-app02/application.properties
+++ b/int/pct-app02/application.properties
@@ -1,3 +1,4 @@
 #------Test new properties on this branch------
-pct.app.01.initial=pct-int-app02
-pct.app.01.email=pct-int-app02@gmail.com
+pct.app.02.label=story-123-branch
+pct.app.02.initial=pct-int-app02
+pct.app.02.email=pct-int-app02@gmail.com
