--- a/pct-app01.properties
+++ b/pct-app01.properties
@@ -1,3 +1,4 @@
 #------Test new properties on this branch------
-pct.app.02.initial=pct-app01
-pct.app.02.email=pct-app01@netcompany.com
+pct.app.01.label=story-123-branch
+pct.app.01.initial=pct-app01
+pct.app.01.email=pct-app01@netcompany.com
